# casterm

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL-LINUX.md  INSTALL.md  LICENSE  README.md  casterm.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: connection-dialog.ts  connection-tree.ts  crypto.ts  ftp-browser.ts  main.ts  master-password-dialog.ts  settings-dialog.ts  settings.ts  styles.css  terminal-manager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ftp.rs  lib.rs  sftp.rs  ssh.rs
