[package]
name = "casterm"
version = "0.9.4"
description = "Casterm - Cross-platform connection and terminal manager"
authors = ["Casterm Team"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.8"
parking_lot = "0.12"
# SSH Support
russh = "0.46"
russh-keys = "0.46"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
shellexpand = "3.1"
# FTP/FTPS Support
suppaftp = { version = "5.2", features = ["native-tls"] }
# SFTP Support
ssh2 = "0.9"

[profile.release]
opt-level = 3
lto = true
